--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,10 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^0.1.2
-
+  animated_text_kit: ^2.2.0
+  firebase_auth: ^0.18.0+1
+  firebase_core: ^0.5.0
+  cloud_firestore: ^0.14.0+2
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -21,3 +24,7 @@ flutter:
 
   assets:
   - images/
+  fonts:
+    - family: Lobster
+      fonts:
+        - asset: fonts/Lobster-Regular.ttf
