--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   firebase_core: ^0.5.0
   cloud_firestore: ^0.14.0+2
   modal_progress_hud: ^0.1.3
+  intl: ^0.16.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
