--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   cloud_firestore: ^0.14.0+2
   modal_progress_hud: ^0.1.3
   intl: ^0.16.1
+  device_info: ^0.4.2+7
+  shared_preferences: ^0.5.10
 
 dev_dependencies:
   flutter_test:
