--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   intl: ^0.16.1
   device_info: ^0.4.2+7
   shared_preferences: ^0.5.10
+  rflutter_alert: ^1.0.3
 
 dev_dependencies:
   flutter_test:
