--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   firebase_storage: ^4.0.0
   image_picker: ^0.6.7+7
   font_awesome_flutter: ^8.8.1
+  splashscreen: ^1.2.0
 
 dev_dependencies:
   flutter_test:
